# generate-card-images

./: .env.example  .gitignore  card_generator.py  full_run.py  generate_all_cards.py  generate_home_pdf.py  generate_pdf.py  notion.py  notion_db_data.py  pyproject.toml  round_border.py  run.py  test_notion.py  utils.py
.github/: copilot-instructions.md  copilot_instructions.md
