[project]
name = "generate_cards"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Martin Faucheux", email = "martin.faucheux@gmail.com"},
]
dependencies = ["google-genai>=1.38.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
